--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,6 @@
 body {
 	margin: 0em;
- 	background-color: black;
+ 	background-color: #101010;
 }
 a {
 	text-decoration: none;
@@ -37,52 +37,163 @@ a {
 		font-weight: 400;
 	}
 }
-
-#main {
-	.addPostPageContainer {
-		text-align: center;
-		.textInput {
-			margin: 0 auto;
-			margin-top: 1em;
-			border: none;
-		    background-color: black;
-		    border-bottom: .1em solid #F1F1F1;
-		    font-size: 1.5em;
-		    outline: none;
-		    color: #F1F1F1;
-		    font-family: 'Titillium Web', sans-serif;
-		    display: block;
+//**********Add Blog Post Page**********
+.addPostPageContainer {
+	text-align: center;
+	.textInput {
+		margin: 0 auto;
+		margin-top: 1em;
+		border: none;
+	    background-color: #101010;
+	    border-bottom: .1em solid #F1F1F1;
+	    font-size: 1.5em;
+	    outline: none;
+	    color: #F1F1F1;
+	    font-family: 'Titillium Web', sans-serif;
+	    display: block;
+	}
+	.textArea {
+		margin: 0 auto;
+		margin-top: 1em;
+		width: 18em;
+		height: 13em;
+		border: none;
+	    background-color: #101010;
+	    border-bottom: .1em solid #F1F1F1;
+	    font-size: 1.5em;
+	    outline: none;
+	    color: #F1F1F1;
+	    font-family: 'Titillium Web', sans-serif;
+	    display: block;
+	    resize: none;
+	}
+	.submitPostBtn {
+		margin-top: 1em;
+		border: 0px solid;
+		background-color: #F1F1F1;
+		color: black;
+		font-family: 'Titillium Web', sans-serif;
+		font-size: x-large;
+		outline: none;
+		cursor: pointer;
+	}
+}
+//**********Home Page**********
+.homePageContainer {
+	.test {
+		color: #F1F1F1;
+		width: 29em;
+		margin: 0 auto;
+		margin-top: 2em;
+		.singalPost {
+			border: 1px solid #F1F1F1;
+			padding: .5em;
+			margin-top: 2em;
 		}
-		.textArea {
-			margin: 0 auto;
-			margin-top: 1em;
-			width: 18em;
-    		height: 13em;
-			border: none;
-		    background-color: black;
-		    border-bottom: .1em solid #F1F1F1;
-		    font-size: 1.5em;
-		    outline: none;
-		    color: #F1F1F1;
-		    font-family: 'Titillium Web', sans-serif;
-		    display: block;
-		    resize: none;
-		}
-		.submitPostBtn {
-			margin-top: 1em;
-			border: 0px solid;
-			background-color: #F1F1F1;
-			color: black;
+		.title {
 			font-family: 'Titillium Web', sans-serif;
-			font-size: x-large;
-			outline: none;
-			cursor: pointer;
+			font-weight: 700;
+			text-align: center;
+			font-size: 1.4em;
+		}
+		.author {
+			font-family: 'Titillium Web', sans-serif;
+			font-weight: 300;
+			font-size: .7em;
+			border-bottom: 1px solid #F1F1F1;
+			border-top: 1px solid #F1F1F1;
+			width: 3.4em;
+		}
+		.newPost {
+			font-family: 'Titillium Web', sans-serif;
+			font-weight: 400;
+			margin-top: .8em;
+			line-height: 1.3em;
+			color: #CFCFCF;
+		}
+		.readMoreLink {
+			font-family: 'Titillium Web', sans-serif;
+			font-weight: 200;
+			margin-top: .5em;
+			color: #D3F0F1;
+			text-decoration: underline;
 		}
 	}
 }
-
-.test {
-	color: red;
+//**********LogIn Page**********
+.loginContainer {
+	margin-top: 8em;
+	.textInput {
+		margin: 0 auto;
+		margin-top: 1em;
+		border: none;
+	    background-color: #101010;
+	    border-bottom: .1em solid #F1F1F1;
+	    font-size: 1.5em;
+	    outline: none;
+	    color: #F1F1F1;
+	    font-family: 'Titillium Web', sans-serif;
+	    display: block;
+	}
+	.loginBtn {
+		margin: 0 auto;
+		margin-top: 1em;
+		border: 0px solid;
+		background-color: #F1F1F1;
+		color: black;
+		font-family: 'Titillium Web', sans-serif;
+		font-size: x-large;
+		outline: none;
+		cursor: pointer;
+		display: block;
+	}
+	.signUp {
+		margin-top: 2em;
+		text-align: center;
+		color: #F1F1F1;
+		font-family: 'Titillium Web', sans-serif;
+		font-weight: 200;
+	}
+	.signupBtn {
+		margin: 0 auto;
+		margin-top: .5em;
+		border: 0px solid;
+		background-color: #F1F1F1;
+		color: black;
+		font-family: 'Titillium Web', sans-serif;
+		font-size: large;
+		outline: none;
+		cursor: pointer;
+		display: block;
+	}
+}
+//**********SignUp Page**********
+.signupContainer {
+	margin-top: 6em;
+	.textInput {
+		margin: 0 auto;
+		margin-top: 1em;
+		border: none;
+	    background-color: #101010;
+	    border-bottom: .1em solid #F1F1F1;
+	    font-size: 1.5em;
+	    outline: none;
+	    color: #F1F1F1;
+	    font-family: 'Titillium Web', sans-serif;
+	    display: block;
+	}
+	.signupBtn {
+		margin: 0 auto;
+		margin-top: 1em;
+		border: 0px solid;
+		background-color: #F1F1F1;
+		color: black;
+		font-family: 'Titillium Web', sans-serif;
+		font-size: x-large;
+		outline: none;
+		cursor: pointer;
+		display: block;
+	}
 }
 //**********Footer**********
 // .footerContainer {
